<resources>
    <string name="app_name">News</string>
    <string name="news_image">image News</string>
    <string name="tx_title">Google oficializa Android 10 com suporte a 5G e celulares dobráveis, novo Tema Escuro e mais</string>
    <string name="tx_date">03/09/2019</string>
    <string name="tx_news">Anunciado em versão de testes desde maio deste ano, o Android 10 foi oficialmente lançado pelo Google nesta terça-feira (3). Agora sem um nome de sobremesa, a nova versão da plataforma do Google chega com mais recursos e compatibilidades ao usuário.\nOs destaques ficam para o suporte a 5G e smartphones dobráveis. A gigante de Mountain View promete facilitar o cotidiano de quem utiliza um celular com seu SO por meio de aprendizado de máquina, além de quase 50 novas funcionalidades e mudanças voltadas a privacidade e segurança. Confira as principais novidades a seguir:\n\nFacilidades\n\nUma das inclusões para o Android 10 é o Smart Reply. Ele sugere ações de forma automática ao usuário, como o melhor aplicativo para abrir determinado vídeo ou endereço da web.\nO Google também passou a inserir a navegação de gestos com ativação pelas configurações. Assim, o dono do celular conseguirá ter otimização em telas maiores. Entre os comandos por movimentos, estão retroceder, abrir a tela inicial e alternar entre tarefas. Tudo sem botões visíveis e de forma fluida, segundo a empresa.\nA décima edição do Android ainda contará com o recurso Live Caption. Com um único toque, ele possibilita adicionar legenda a vídeos, podcasts e mensagens de áudio em qualquer app – inclusive os que foram gravados pelo próprio usuário. No entanto, a ferramenta chegará apenas nos próximos meses aos aparelhos Pixel.\nPara completar, a nova plataforma traz novos emojis com inclusão de gênero, além de suporte direto de áudio para aparelhos auditivos.\n\nTema escuro\n\nA gigante de buscas também acrescentou mudanças ao Tema Escuro para a mais recente atualização do sistema operacional. Agora, como mostra o vídeo acima, é possível escolher a forma de aplicação da funcionalidade na interface.\nIsso significa que o usuário poderá habilitá-la para todo o telefone, mas também – caso prefira – terá a opção de ativar apenas para aplicativos selecionados – como Chrome, Fotos e Calendário. O Tema Escuro também é ligado junto com o modo de economia de energia.\n\nSegurança\n\nO Google Play recebeu mais correções de segurança e privacidade, assim como os apps são atualizados, por meio de notificações. Em Configurações, o usuário também conseguirá encontrar uma nova seção de Privacidade, com controle de Atividade de Web e App, além das Configurações de Anúncio.\nO proprietário do celular com Android 10 instalado ainda poderá optar se quer e quando compartilhar os dados de localização com as aplicações – inclusive quando o acesso for em segundo plano.\n\nBem-estar digital\n\nComo forma de equilibrar o uso de tecnologia no cotidiano, o Google apresentou novidades para o chamado “bem-estar digital”. Um deles é o recurso Focus Mode, o qual permite ao usuário a decisão de quando, onde e como receberá notificações. Assim, é possível silenciar avisos de e-mails, notícias ou redes sociais até o modo ser desativado. Ele ainda está em beta e é possível testá-lo por este link.\nO Android 10 vem com o recurso corporativo, a fim de possibilitar o uso de teclados diferentes para perfis pessoais e profissionais. Ele chega com temporizadores de aplicativos para determinados sites, como forma de equilibrar o tempo gasto com trabalho no dispositivo.\nPor último, o recurso Family Link vai fazer parte de todos os smartphones com Android 9 ou 10, com acesso nas configurações do Bem-Estar Digital. Esta ferramenta permite o controle parental em relação aos conteúdos e período de acesso digital dos filhos.\n\nDisponibilidade\n\nO Android 10 chegará aos smartphones da família Google Pixel a partir desta terça-feira (3). A gigante de buscas declarou também trabalhar com parceiros para disponibilizar o Android 10 aos celulares de outras marcas ainda neste ano de 2019.\n</string>
    <string name="tx_author">Rafael Barbosa</string>
    <string name="bt_last">previous</string>
    <string name="bt_next">next</string>
</resources>
